<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewModel"
            type="com.example.gifgallery.ui.gifview.GifGalleryViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/gifsFragRefreshLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{viewModel.isInternetAvailable ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="150dp"
                        android:text="@string/offline"
                        android:textColor="@color/text_grey"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="200dp"
                        android:text="@string/offline_interent_connection"
                        android:textColor="@color/text_grey"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gifGalleryFragTapToRefresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="250dp"
                        android:background="@drawable/rounded_button"
                        android:onClick="@{() -> viewModel.refresh(true)}"
                        android:padding="15dp"
                        android:paddingStart="50dp"
                        android:paddingEnd="50dp"
                        android:text="@string/offline_tap_to_refresh"
                        android:textColor="@color/text_grey"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

                <com.example.gifgallery.ui.ScrollChildSwipeRefreshLayout
                    android:id="@+id/gifsGallerySwipeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="@{viewModel.isInternetAvailable ? View.VISIBLE : View.GONE}"
                    app:onRefreshListener="@{() -> viewModel.refresh(true)}"
                    app:refreshing="@{viewModel.dataLoading}">




                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/gifGalleryToolbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/AppThemeNoActionBarToolbar"
                            app:title="@string/app_name"
                            app:searchResult="@{(x) -> viewModel.onSearchTextChanged(x)}"/>

                        <ProgressBar
                            android:id="@+id/gifGalleryFragProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:theme="@style/OrangeAcccent"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/gifGallerySearchText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_something"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:textColor="@color/text_grey"
                            android:visibility="@{viewModel.isSearchEmpty ? View.VISIBLE : View.GONE}"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/gifGalleryFragRv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/gifGalleryToolbar"
                            app:items="@{viewModel.items}" />

                    </RelativeLayout>

                </com.example.gifgallery.ui.ScrollChildSwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>